Alembic does not import children of cameras correctly #73269

Closed
opened 2020-01-20 17:37:50 +01:00 by Vincent Girès · 9 comments

System Information
Operating system: Linux-3.10.0-327.el7.x86_64-x86_64-with-centos-7.2.1511-Core 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42

Short description of error
Alembic does not import object inside a group correcty

Exact steps for others to reproduce the error
Import this alembic file cam_from_maya_raw.abc in blender and you can see the problem which is not there on maya or nuke.

abc_bug_report_blender.png

It should be aligned like that:

Maya
abc_bug_report_maya.png

Nuke
abc_bug_report_nuke.png

**System Information** Operating system: Linux-3.10.0-327.el7.x86_64-x86_64-with-centos-7.2.1511-Core 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` **Short description of error** Alembic does not import object inside a group correcty **Exact steps for others to reproduce the error** Import this alembic file [cam_from_maya_raw.abc](https://archive.blender.org/developer/F8289930/cam_from_maya_raw.abc) in blender and you can see the problem which is not there on maya or nuke. ![abc_bug_report_blender.png](https://archive.blender.org/developer/F8289931/abc_bug_report_blender.png) It should be aligned like that: Maya ![abc_bug_report_maya.png](https://archive.blender.org/developer/F8289933/abc_bug_report_maya.png) Nuke ![abc_bug_report_nuke.png](https://archive.blender.org/developer/F8289938/abc_bug_report_nuke.png)
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires
Vincent Girès changed title from Alembic does import object inside a group correcty to Alembic does not import object inside a group correcty 2020-01-20 21:56:50 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm the behavior.
Not sure how this looks from the inside, will check abcecho...

Can confirm the behavior. Not sure how this looks from the inside, will check `abcecho`...

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Sybren A. Stüvel self-assigned this 2020-02-13 15:44:29 +01:00

In the example Alembic file there are three cameras in a hierarchy. CAM_C is the parent, with children CAM_R and CAM_L.

On top of the whole Y=up (Alembic) vs. Z=up (Blender), cameras in Alembic have a different coordinate system than cameras in Blender. After the conversion to Blender's Z=up, this difference remains:

  • Blender camera: looks towards -Z by default
  • Alembic camera: looks towards -Y by default

As a result, we have to apply yet another rotation to get the cameras to match; let's call this the "correction rotation". This is done for every Alembic camera, and as a result the children of such a camera are rotated as well. This is what you see when importing the example file.

I think the solution would be to put the inverse of this rotation in the inverse parent matrix of any object that is a child of a camera.

In the example Alembic file there are three cameras in a hierarchy. `CAM_C` is the parent, with children `CAM_R` and `CAM_L`. On top of the whole Y=up (Alembic) vs. Z=up (Blender), cameras in Alembic have a different coordinate system than cameras in Blender. After the conversion to Blender's Z=up, this difference remains: - Blender camera: looks towards `-Z` by default - Alembic camera: looks towards `-Y` by default As a result, we have to apply yet another rotation to get the cameras to match; let's call this the "correction rotation". This is done for every Alembic camera, and as a result the children of such a camera are rotated as well. This is what you see when importing the example file. I think the solution would be to put the inverse of this rotation in the inverse parent matrix of any object that is a child of a camera.

This issue was referenced by 7c5a44c71f

This issue was referenced by 7c5a44c71f13ef00067f5c5951a275eb2eab2eef

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel changed title from Alembic does not import object inside a group correcty to Alembic does not import children of cameras correctly 2020-02-14 15:44:34 +01:00
Author

Thank you. This is working great in the last build and also for geometry shapes!

Thank you. This is working great in the last build and also for geometry shapes!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73269
No description provided.